[package]
name = "advent-of-code-23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
quote = "1.0.33"
syn = "2.0.39"

[lib]
name = "macros"
proc-macro = true

